<resources>
    <string name="error_no_response">No response received from the server.</string>
    <string name="error_no_internet">No internet connection available.</string>
    <string name="error_request_timeout">The request has timed out.</string>
    <string name="error_internal_error">Internal server is not responding</string>
    <string name="error_payload_too_large">The payload is too large to process.</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="error_not_data_found">No data found.</string>
    <string name="unable_to_upload">Unable to upload file at the moment.</string>
    <string name="file_not_found">The requested file not found</string>
    <string name="conflict_found">There is a conflict found</string>
    <string name="unable_to_access_file">Unable to access the file.</string>
    <string name="permission_denied">Permission denied to access the file.</string>
    <string name="io_error">An input/output error occurred while accessing the file.</string>
    <string name="insufficient_storage">There is not enough storage available to complete the operation.</string>
    <string name="invalid_uri">The provided URI is invalid or does not point to a valid file.</string>
    <string name="unsupported_file_type">The file type is not supported.</string>
    <string name="security_exception">A security exception occurred while accessing the file.</string>
    <string name="file_too_large">The file size is too large for the operation.</string>
    <string name="file_already_exists">A file with the specified name already exists.</string>
    <string name="error_un_authorized">You are not authorized to perform this operation.</string>
    <string name="error_bad_request">Bad request.</string>
    <string name="error_too_long">The input is too long. Please shorten it.</string>
    <string name="error_too_small">The input is too short. Please provide more information.</string>
    <string name="error_blank">Required field.</string>
    <string name="error_invalid">The input is invalid. Please check and try again.</string>
    <string name="error_unsupported_file">The file format is unsupported. Please use a different file.</string>
    <string name="error_not_verified">The input is not verified</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="phone_already_exists">Phone number already exists</string>
    <string name="title">Title</string>
    <string name="hint">Hint</string>
    <string name="button">Button</string>
    <string name="app_name">PaySimati</string>
    <string name="paysimati_logo_at_the_splashscreen">PaySimati Logo at the SplashScreen</string>
    <string name="intro_text">Elevate your spending game with fast, secure, free e-payments</string>
    <string name="image_description">Image Description</string>
    <string name="register">Register</string>
    <string name="Continue_with_Google">Continue with Google</string>
    <string name="app_version">Version 0.1</string>
    <string name="registration">Registration</string>
    <string name="next_kyc_registration">Next - KYC Registration</string>
    <string name="one_of_two">1 of 2</string>
    <string name="two_of_two">2 of 2</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="supported_file_types">Supported file types: .png, .jpg, .jpeg for images, and .pdf for documents\nMax file size: 10MB</string>
    <string name="supported_file_types_two">Supported file types: .png, .jpg, .jpeg for images\nMax file size: 10MB</string>
    <string name="make_visible">Make visible</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="required_field">Required field</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_middle_name">Enter middle name</string>
    <string name="enter_a_valid_email_and_phone">Enter a valid email and phone number. To confirm it’s you, we will send a verification code.</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="enter_email">Enter email</string>
    <string name="verified">VERIFIED</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="drop_down">Drop down</string>
    <string name="country_code">+265</string>
    <string name="phone">Phone Number</string>
    <string name="security_question_registration_header">Security Question (Select any 3 of 4)</string>
    <string name="guide">Guide</string>
    <string name="childhood_nickname">What was your childhood nickname?</string>
    <string name="make_and_model_of_car">What was the make and model of your first car?</string>
    <string name="name_of_childhood_teacher">What was the name of your childhood teacher?</string>
    <string name="name_of_place_you_first_visited">What is the name of the place you first visited outside your home town?</string>
    <string name="answer">Answer</string>
    <string name="terms_and_conditions"><![CDATA[I have read and agree to PaySimati’s Terms & Conditions and Privacy Policy]]></string>
    <string name="submit">Submit</string>
    <string name="answer_any_three">Answer any 3</string>
    <string name="close_button_data">close button</string>
    <string name="bullet_char">•</string>
    <string name="please_provide_unique">Please provide unique and memorable answers that are easy to remember, even years later.</string>
    <string name="answers_should_be_clear">Answers should be clear and exact (preferably a single word), but they don\'t need to be truthful. Indeed, it\'s best to use fake answers for security questions to enhance security.</string>
    <string name="email_verification">Email Verification</string>
    <string name="email_verify_sub_text">Check your email for a verification OTP. The OTP will be active for 10 minutes.</string>
    <string name="sample_email">john12@gmail.com</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_place_holder">_ _ _ _ _ _</string>
    <string name="sample_time">10:00</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="didn_t_receive_otp">Didn\'t Receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="phone_verify_sub_text">Check your phone for a verification OTP. The OTP will be active for 10 minutes.</string>
    <string name="security_question_id">security_question_id</string>
    <string name="please_verify_email">Please Verify Your Email Address</string>
    <string name="please_verify_phone">Please Verify Your Phone Number</string>
    <string name="default_error_toast">Something went wrong! Try again later.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="successfully_resent_otp">OTP resent successfully</string>
    <string name="resend_limit_is_3">Resend limit is 3 times</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="welcome_to_paysimati">Welcome to PaySimati!</string>
    <string name="welcome_to_paysimati_sub_text">Your registration is a vital step in realising our vision of universal e-payments. Thank you for joining us on this transformative journey. Please now complete online KYC registration to start</string>
    <string name="didn_t_receive_credentials">Didn’t receive credentials?</string>
    <string name="login_to_complete_your_kyc">Login to complete your KYC Registration</string>
    <string name="terms_and_conditions_wv">Terms and Conditions</string>
    <string name="back_button">Back Button</string>
    <string name="paysimati_logo">PaySimati logo</string>
    <string name="pin">PIN</string>
    <string name="password">Password</string>
    <string name="login_by">Login By</string>
    <string name="change">Change</string>
    <string name="drop_down_button_data">drop down button</string>
    <string name="paysimati_id">PaySimati ID</string>
    <string name="paysimati_id_formatted">PaySimati ID : %1$s</string>
    <string name="paysimati_code">CMR</string>
    <string name="enter_paysimati_id">Enter PaySimati ID</string>
    <string name="kyc_registration">KYC Registration</string>
    <string name="item_1">1.</string>
    <string name="item_2">2.</string>
    <string name="item_3">3.</string>
    <string name="item_4">4.</string>
    <string name="kyc_process_text1">PaySimati is identifying its customers, via the following Know Your Customer (KYC) process, according to provisions of Malawi’s Financial Crimes (Money Laundering) Regulations, 2019 viz.:</string>
    <string name="kyc_process_text2">Every reporting institution shall apply a risk-based approach in identifying its customers in accordance with section 21 of the Act;</string>
    <string name="kyc_process_text3">In applying the requirements of sub-regulation (1), every reporting institution shall ensure that the results of the risk assessment are consistent with national risk assessment of money laundering and terrorist financing or other relevant assessments done by supervisory authorities;</string>
    <string name="kyc_process_text4">Where a reporting institution identifies lower risks, the reporting institution may decide to allow simplified measures for customer due diligence provided that enhanced due diligence shall be applied where there is suspicion of money laundering, terrorist financing or other financial crime;</string>
    <string name="kyc_process_text5">Every reporting institution shall ensure that the results of the institution’s</string>
    <string name="industry_sector">Industry Sector</string>
    <string name="select_bank">Select Bank</string>
    <string name="kyc_bank_option1">CDH Investment Bank</string>
    <string name="kyc_bank_option2">Centenary Bank</string>
    <string name="kyc_bank_option3">Ecobank</string>
    <string name="kyc_bank_option4">FDH Bank</string>
    <string name="kyc_bank_option5">First Capital Bank</string>
    <string name="kyc_bank_option6">National Bank</string>
    <string name="kyc_bank_option7">NBS Bank</string>
    <string name="kyc_bank_option8">Standard Bank</string>
    <string name="industry_sector_option1"><![CDATA[Accommodation & Food Service Activities]]></string>
    <string name="industry_sector_option2"><![CDATA[Agriculture, Forestry & Fishing]]></string>
    <string name="industry_sector_option3"><![CDATA[Commerce | Wholesale & Retail Trade]]></string>
    <string name="industry_sector_option4">Construction</string>
    <string name="industry_sector_option5">Education Services</string>
    <string name="industry_sector_option6"><![CDATA[Financial & Insurance Activities]]></string>
    <string name="industry_sector_option7">Healthcare Services</string>
    <string name="industry_sector_option8"><![CDATA[Information & Communication]]></string>
    <string name="industry_sector_option9">Manufacturing</string>
    <string name="industry_sector_option10"><![CDATA[Mining & Quarrying]]></string>
    <string name="industry_sector_option11"><![CDATA[Public Administration & Defence]]></string>
    <string name="industry_sector_option12">Professional Services</string>
    <string name="industry_sector_option13">Real Estate Activities</string>
    <string name="industry_sector_option14"><![CDATA[Transport & Storage Services]]></string>
    <string name="industry_sector_option15"><![CDATA[Utilities | Electricity, Gas & Water]]></string>
</resources>