<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kycRegistrationProcessActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.kyc.KycRegistrationProcessActivity">

    <RelativeLayout
        android:id="@+id/kycRegistrationProcessActivityTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/kycRegistrationProcessActivityCloseIV"
            android:fontFamily="@font/inter_regular"
            android:text="@string/kyc_registration"
            android:textColor="@color/accentPositive"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/kycRegistrationProcessActivityCloseIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/close_button_data"
            android:padding="16dp"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kycRegistrationProcessActivityTopBar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/kyc_process_text1"
                android:textColor="@color/white"
                android:justificationMode="inter_word"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/item_1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/kyc_process_text2"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:justificationMode="inter_word" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/item_2"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/kyc_process_text3"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:justificationMode="inter_word" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/item_3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/kyc_process_text4"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:justificationMode="inter_word" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/item_4"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/kyc_process_text5"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:justificationMode="inter_word" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>